--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header{
     padding: 15px;
    
 }
+
 .logo{
     font-size: 29px;
     font-weight: 700;
@@ -50,6 +51,9 @@ ul li a{
     font-size: 21px;
     font-weight: 500;
     font-family: 'Lexend';
+}
+.bars{
+    display: none;
 }
 .btn-nav{
     background: linear-gradient(90deg, #a148ff 0%, #ff6f45 100%);
@@ -340,12 +344,6 @@ margin-top: 60px;
   gap: 20px;
   padding: 10px;
   margin-top: 60px;
-   
-
-
-
-
-
 }
 .price-child{
     background-color: rgba(255, 255, 255,0.4);
@@ -472,7 +470,7 @@ margin-top: 60px;
  top: 110px;
  left: 350px;
  padding: auto;
-  
+
 }
 
 .contact-i{
@@ -799,4 +797,411 @@ span{
 }
 .footer-flex h1{
     margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 600px){
+ .bars{
+    display: inline;
+    font-size: 30px;
+    color: white;
+    margin-right: -20px;
+    margin-top: 22px;
+ }
+ .active ,.btn-nav{
+    display: none;
+ }
+.logo{
+    margin-left: -50px;
+
+}
+header{
+    width: 100vw;
+}
+
+.mene-content{
+   width: 100vw;
+  
+}
+.mene-content h1{
+    color: white;
+    font-family: 'Lexend';
+    font-size: 70px;
+    line-height: 77px;
+    font-weight: 700;
+    margin-left: -100px;
+    margin-top: -50px;
+}
+.mene-content p{
+    color: white;
+    font-family: 'Lexend';
+    font-size:21px;
+    line-height: 31px;
+    font-weight: 400;
+    margin-bottom: 20px;
+   width: 100vw;
+   margin-left: -170px;
+}
+
+
+.container{
+    width: 100vw;
+    height: 150vh;
+}
+.about{
+    flex-direction: column;
+}
+.about img{
+    width: 518px;
+    height: 670.16px;
+    border-radius: 15px;
+    margin-left: -50px;
+    margin-top: -30px;
+   }
+   
+   .about-content{
+      
+       /* background-color: #e5eeff; */
+       border-radius: 20px;
+       height: 189.44px;
+       width: 500px;
+       margin-top: 10px;
+       margin-left: -20px;
+    
+     
+   
+   }
+   .about-content h1{
+    color: #263d5a;
+    font-size: 70px;
+    font-weight: 700;
+    font-family: 'Lexend';
+    margin-left: 25px;
+
+
+   
+}
+.about-content p{
+    color: #263d5a;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Lexend';
+    margin-left: 25px;
+    margin-top: 15px;
+    line-height: 24px;
+
+
+}
+.features{
+    background: linear-gradient(rgba(188,211,253,0.2),rgba(177,234,251,0.2)),url("https://images.unsplash.com/photo-1581985283743-abc20b6d8993?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 1602.16px;
+    padding: 10px;
+ 
+    
+}
+.features h1{
+    color: white;
+    font-size: 21px;
+    font-weight: 400;
+    line-height: 31px;
+    font-family: 'Lexend';
+    text-align: center;
+    padding: 10px;
+
+}
+.features p{
+    color: white;
+    font-size: 29px;
+    font-weight: 700;
+    line-height: 43px;
+    font-family: 'Lexend';
+    text-align: center;
+
+}
+.cards-box{
+    width: 1200px;
+    margin-left: -300px;
+}
+.grid-box{
+ display: flex;
+flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 60px;
+   
+
+
+
+
+
+}
+.card{
+    background-color: rgba(255, 255, 255,0.4);
+     padding: 20px;
+     height: 381.38px;
+    text-align: center;
+    border-radius: 20px;
+    width: 500px;
+ 
+  
+}
+.card p{
+    color: black;
+    font-size:16px;
+    font-weight: 400;
+    font-family: 'Lexend';
+    line-height:24px ;
+}
+.card h1{
+    color: black;
+    font-size:21px;
+    font-weight: 700;
+    font-family: 'Lexend';
+    line-height:31px ;
+}
+.fa-lightbulb ,.fa-user,.fa-paint-brush{
+    text-align: center;
+    font-size: 35px;
+    color: #a148ff;
+    background-color: #edeef0;
+    border-radius: 50%;
+    padding: 20px;
+    margin: 10px;
+    
+}
+.card .btn{
+   margin-top: 50px;
+}
+.progress{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left:15%;
+    padding: 100px;
+    gap: 20px;
+
+   
+ 
+   
+}
+.progress img{
+    border-radius: 20px;
+    width: 564.33px;
+    height: 400.44px;
+    margin-top: 40px;
+    z-index: 1;
+    margin-left: -100px;
+    margin-top: -70px;
+  
+   
+  
+}
+.mycompetence{
+    background-color: #e5eeff;
+    padding: 20px;
+    width: 530px;
+    height:450px;
+    border-radius: 20px;
+    position: relative;
+    margin-left: -100px;
+    padding-top: 80px;
+   
+}
+
+.mycompetence  h1{
+    color: #263d5a;
+    font-size: 55px;
+    font-weight: 700;
+    font-family: 'Lexend';
+  
+    text-align: center;
+    margin-left: -10px;
+    margin-top: -20px;
+
+
+   
+}
+.mycompetence p{
+    color: #263d5a;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Lexend';
+    margin-left: 30px;
+    margin-top: 25px;
+    line-height: 24px;
+}
+.mycompetence img{
+  
+    margin-left: 0px;
+    margin-top: 20px;
+    width: 557px;
+    height: 300px;
+
+}
+.PRICING{
+    background: linear-gradient(rgba(188,211,253,0.2),rgba(177,234,251,0.2)),url("https://images.unsplash.com/photo-1550684848-fac1c5b4e853?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTA4fHxiYWNrZ3JvdW5kJTIwcGFpbnR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 1602.16px;
+}
+
+.grid-price{
+  display: grid;
+  grid-template-columns: 1fr ;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 10px;
+  margin-top: 60px;
+  margin-left: 10px;
+   
+
+
+
+
+
+}
+.price-child{
+    background-color: rgba(255, 255, 255,0.4);
+     padding: 10px;
+     height: 421.38px;
+     width: 500px;
+     border-radius: 20px;
+  
+}
+
+.client{
+    background: linear-gradient(to right, rgba(214, 51, 132,0.5),rgba(32, 201, 151,0.5), rgba(214, 51, 132,0.5));
+    height: 956.94px; 
+   
+}
+.grid-client{
+    display: grid;
+    grid-template-columns: 1fr ;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+
+
+  }
+.client-child{
+    margin-left: 80px;
+}
+.client-child{
+    background-color: rgba(255, 255, 255,0.4);
+     height: 124.5px;
+     border-radius: 20px;
+     width: 398px;
+     margin-top: 20px;
+     padding: 40px;
+
+
+  
+}
+
+.client-child img{
+    width: 180px;
+    height: 98.5px;
+    margin-top: 10px;
+    margin-left: 100px;
+ 
+    
+  }
+  
+.contact{
+    background: linear-gradient(rgba(188,211,253,0.2),rgba(177,234,251,0.2)),url("https://images.unsplash.com/photo-1553356009-50faee7aa84c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 556.16px; 
+}
+
+.contact-child{
+    background-color: rgba(255, 255, 255,0.4);
+     height: 458.53px;
+     border-radius: 20px;
+     width:528px;
+   position: relative;
+ top: 50px;
+ left: 50px;
+ padding: auto;
+
+}
+
+.contact-i{
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+   justify-content: center;
+   align-items: center;
+   padding: 10px;
+   color: #263d5a;
+   line-height: 31px;
+   gap: 20px;
+
+   }
+   .header-con{
+    color: #263d5a;
+    font-size:45px;
+    font-weight: 700;
+    font-family: 'Lexend';
+    line-height:49px ;
+    text-align: center;
+    padding-top: 80px;
+  
+ 
+  
+
+
+   }
+   
+span{
+    color: #263d5a;
+    line-height: 41px;
+    margin-left: 10px;
+ 
+    }
+    .contact-i i{
+        font-size: 21px;
+    }
+   
+    
+    .con-child{
+        background-color: rgba(255, 255, 255,0.4);
+         height: 358.53px;
+         border-radius: 20px;
+         width: 488px;
+       position: relative;
+     top: 110px;
+     left: 90px;
+     padding: auto;
+     box-shadow:20px black;
+      
+    }
+    .join{
+        background: linear-gradient(to right,rgba(13, 109, 252, 0.4),rgba(13, 109, 252, 0.3), rgba(13, 109, 252, 0.4)),url("https://images.unsplash.com/photo-1603665143615-4b7cafb5366b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzQ3fHxiYWNrZ3JvdW5kJTIwcGFpbnR8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        height: 256.16px;
+       }
+    
+       .join-child{
+        background-color: rgba(255, 255, 255,0.4);
+         height: 101px;
+         border-radius: 20px;
+         width: 958px;
+       position: relative;
+     top: -60px;
+     left: 600px;
+     padding: auto;
+    
+      
+    }
+    
 }
